// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Version renders correctly with latest version 1`] = `
<div
  className="Version-version-1"
>
  <p
    className="Version-par-2"
  >
    Version Info
  </p>
  <p
    className="Version-par-2"
  >
    Flexget: 
    2.10.60
     
     
  </p>
  <p
    className="Version-par-2"
  >
    API: 
    1.1.2
  </p>
</div>
`;

exports[`components/layout/Version renders correctly without latest version 1`] = `
<div
  className="Version-version-1"
>
  <p
    className="Version-par-2"
  >
    Version Info
  </p>
  <p
    className="Version-par-2"
  >
    Flexget: 
    2.10.11
     
    <a
      className="MuiButtonBase-root-c MuiIconButton-root-3"
      href="https://flexget.com/ChangeLog"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
    >
      <span
        className="MuiIconButton-label-9"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-e MuiIconButton-icon-a fa fa-question-circle-o Version-version-1"
        />
      </span>
      <span
        className="MuiTouchRipple-root-l"
      />
    </a>
     
  </p>
  <p
    className="Version-par-2"
  >
    API: 
    1.1.2
  </p>
</div>
`;
